header and homepage designed completed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Desh Career</title>
     </head>
 
-    <body>
+    <body class="relative min-h-screen">
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
