picture issue solved

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- font awesome kit -->
+        <script src="https://kit.fontawesome.com/21b1f782ae.js" crossorigin="anonymous"></script>
         <title>Desh Career</title>
     </head>
 
